[package]
name = "rts"
edition = "2021"
authors = ["miruji <miruji@protonmail.com>"]
description = "Reactive Scripting Language of Free Data Structures"
license-file = "LICENCE"
readme = "README.md"
publish = false

[dependencies]
termion = "4.0.5"
lazy_static = "1.5.0"
rand = "0.9.2"
log = "0.4.27"

[lib]
name = "rts"
path = "src/lib.rs"

[[bin]]
name = "rts"
path = "src/main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
overflow-checks = false
debug  = false
incremental = true
rpath = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
incremental = true