[package]
name = "rts"
edition = "2021"
authors = ["miruji <miruji@protonmail.com>"]
description = "Real-Time Programming Language of Free Data Structures"
license = "FCL"
license-file = "LICENCE.md"
readme = "README.md"

autobins = false
autoexamples = false
autotests = false
autobenches = false

publish = false

[dependencies]
lazy_static = "1.5.0"
termion = { version = "4.0.5", optional = true }
rand = { version = "0.9.2", optional = true }
wasm-bindgen = {  version = "0.2", optional = true }
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

libloading = { version = "0.9.0", optional = true }
# Используется для динамической загрузки библиотек (libraryPath) 
# и получения указателей на функции (methodName), которые затем вызываются.

postcard = { version = "1.1.3", features = ["alloc"], optional = true }
# Обеспечивает бинарную сериализацию с COBS-фреймингом для надёжной 
# передачи сообщений между процессами без конфликтов с текстовым выводом.

libc = "0.2.186"
# Предоставляет системные вызовы dup2/dup для временного 
# перенаправления stdout → stderr, изолируя вывод библиотеки от служебного канала.

libffi = "5.1.1"
# Предоставляет динамический вызов C-функций с произвольной сигнатурой 
# (количество и типы аргументов, тип возврата) во время выполнения. 
# В отличие от статически зашитых обёрток, libffi позволяет конструировать 
# вызов на лету на основе описания типов, что хорошо для FFI.

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--enable-bulk-memory'] # Нужно было для билда wasm с opt

[lib]
name = "rts"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] # cdylib → WASM/FFI, rlib → внутреннее использование

[[bin]]
name = "rts"
path = "src/main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
overflow-checks = false
debug  = false
incremental = true
rpath = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
incremental = true

[features]

# test:
# cargo test
# cargo test --lib

# cargo build
default = ["termion","rand","libloading","serde","postcard"]

# Сборка на wasm
# debug: cargo build --lib --target wasm32-unknown-unknown --features analyzer --no-default-features
# release: wasm-pack build --target web --features analyzer --no-default-features

# Отладка wasm
# wasm-tools print rts.wasm

# test:
# cargo test --features analyzer --lib
analyzer = [
  "wasm-bindgen",
  "serde_json",
  "serde"
]